force-app/main/default/objects/Account/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Kodiak employee that is assigned to the account as account manager</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>