force-app/main/default/objects/Account/fields/ASYMBL_Time__Pay_Period_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Pay_Period_Start_Day__c</fullName>
    <label>Pay Period Start Day</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ASYMBL_Time__Pay_Period_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ASYMBL_Time__Pay_Period_Days</valueSetName>
    </valueSet>
</CustomField>