force-app/main/default/objects/Account/fields/ASYMBL_Time__Pay_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>ASYMBL_Time__Pay_Period_Type__c</fullName>
    <label>Pay Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>