force-app/main/default/objects/Account/fields/In_House_Trades__c.field-meta.xml
<CustomField>
    <fullName>In_House_Trades__c</fullName>
    <description>If company self performs, what trades do they do?</description>
    <label>In House Trades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Kodiak_Craft_List</valueSetName>
    </valueSet>
</CustomField>