force-app/main/default/objects/Account/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <description>Displays the price book associated with this account</description>
    <label>Price Book</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Price_Books</valueSetName>
    </valueSet>
</CustomField>