force-app/main/default/objects/Account/fields/Price_Book_LU__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the price book associated with a customer</description>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>