force-app/main/default/objects/Account/fields/Staffing_Prior_to_Kodiak__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Prior_to_Kodiak__c</fullName>
    <description>Are we the first staffing provider this customer has used?</description>
    <label>Staffing Prior to Kodiak</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>