force-app/main/default/objects/Account/fields/Type_of_Staffing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Staffing_Customer__c</fullName>
    <description>If company uses a staffing solution, indicate how they use them</description>
    <label>Type of Staffing Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
            <value>
                <fullName>Project Supplement</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>