force-app/main/default/objects/Account/fields/Workforce_Types__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Types__c</fullName>
    <description>Determines whether the potential customer would be supported with local or traveling craftspeople.</description>
    <label>Workforce Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travelers</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>