force-app/main/default/objects/Account/recordTypes/Partner_Organization.recordType-meta.xml
<RecordType>
    <fullName>Partner_Organization</fullName>
    <active>true</active>
    <description>Used to represent trade associations and other non-customer partner organizations</description>
    <label>Partner Organization</label>
</RecordType>